# space-game-typings

./: .gitignore  Cargo.toml  Dockerfile  README.md  generate.sh  nginx.conf
.github/workflows/: generate.yml  rust.yml
src/: data_export.rs  do_data_export.rs  lib.rs  serde_helper.rs  test_helper.rs
src/dynamic/: instruction.rs  mod.rs  site.rs  site_entity.rs
src/entity/: collateral.rs  mod.rs
src/fixed/: database.rs  do_data_export.rs  facility.rs  item.rs  lifeless.rs  mod.rs  module.rs  npc_faction.rs  round_effect.rs  shiplayout.rs  site.rs  solarsystem.rs
src/fixed/item/: details.rs  mineral.rs  mod.rs  ore.rs
src/fixed/module/: mod.rs  passive.rs  targeted.rs  untargeted.rs
src/frontread/: health.rs  mod.rs  site_entity.rs  site_inners.rs
src/frontread/site_log/: actor.rs  mod.rs
src/frontrw/: instruction.rs  mod.rs  site_instruction.rs  station_instruction.rs
src/market/: mod.rs  order.rs  trade.rs
src/persist/: mod.rs  player.rs  player_assets.rs  player_general.rs  player_location.rs  ship.rs  site.rs  site_entity.rs
src/persist/ship/: cargo.rs  fitting.rs  mod.rs  status.rs
src/player/: general.rs  location.rs  mod.rs  notifications.rs  station_assets.rs
src/ship/: cargo.rs  fitting.rs  mod.rs  status.rs
src/site/: entity.rs  entity_frontread.rs  instruction.rs  log.rs  mod.rs  sites.rs
src/station/: instruction.rs
src/storage/: mod.rs
static/: facility.yaml  item.yaml  lifeless.yaml  module-passive.yaml  module-targeted.yaml  module-untargeted.yaml  ship-layout.yaml  solarsystem.yaml
typescript/: manual.ts
(+6 files in other folders)
