[package]
name = "typings"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
serde_json = "1"
serde_yaml = "0.8"

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
ts-rs = "3"
