[package]
name = "space-game-typings"
description = "Type definitions and generic functions for the untitled space-game"
version = "0.1.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/EdJoPaTo/space-game-typings"
authors = ["EdJoPaTo <space-game-typings-rust@edjopato.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
typescript = ["ts-rs"]

[dependencies]
anyhow = "1"
serde_json = "1"
serde_yaml = "0.8"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.ts-rs]
version = "5"
optional = true
features = ["serde-compat"]
